added python file with function that makes all possible inputs for a network or perceptron.

--- a/P1-perceptron/Untitled.ipynb
+++ b/P1-perceptron/Untitled.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "from typing import List\n",
+    "from test_help import "
    ]
   },
   {
