--- a/P1-perceptron/Untitled.ipynb
+++ b/P1-perceptron/Untitled.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "from test_help import "
+    "from test_help import all_possible_inputs, print_perceptron, print_perceptron_network"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INVERT-poort"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "met input: [0] is output: 1\n",
+      "met input: [1] is output: 0\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "INVERT = Perceptron([-1.0], 0.5)\n",
+    "print_perceptron(INVERT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AND-poort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0] is output: 0\n",
+      "met input: [0, 1] is output: 0\n",
+      "met input: [1, 0] is output: 0\n",
+      "met input: [1, 1] is output: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "AND = Perceptron([0.5, 0.5], -1)\n",
+    "print_perceptron(AND)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OR-poort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0] is output: 0\n",
+      "met input: [0, 1] is output: 1\n",
+      "met input: [1, 0] is output: 1\n",
+      "met input: [1, 1] is output: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "OR = Perceptron([0.5, 0.5], -0.5)\n",
+    "print_perceptron(OR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOR-poort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0] is output: 1\n",
+      "met input: [0, 1] is output: 0\n",
+      "met input: [1, 0] is output: 0\n",
+      "met input: [1, 1] is output: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "NOR = Perceptron([-1.0, -1.0], 0.5)\n",
+    "print_perceptron(NOR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "figuur 2.8 uit de reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0, 0] is output: 0\n",
+      "met input: [0, 0, 1] is output: 0\n",
+      "met input: [0, 1, 0] is output: 0\n",
+      "met input: [0, 1, 1] is output: 1\n",
+      "met input: [1, 0, 0] is output: 1\n",
+      "met input: [1, 0, 1] is output: 1\n",
+      "met input: [1, 1, 0] is output: 1\n",
+      "met input: [1, 1, 1] is output: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig = Perceptron([0.6, 0.3, 0.2], -0.4)\n",
+    "\n",
+    "print_perceptron(fig)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +247,6 @@
     "        output_and_input = [inputs]\n",
     "\n",
     "        for layer in self.perceptron_layers:\n",
-    "            print(output_and_input)\n",
     "            output_and_input.append(list(pc.activation(output_and_input[-1]) for pc in layer.perceptrons))\n",
     "\n",
     "        return output_and_input[-1]\n"
@@ -130,6 +257,81 @@
    "metadata": {},
    "source": [
     "### test perceptron network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XOR-poort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0] is de output: [0]\n",
+      "met input: [0, 1] is de output: [1]\n",
+      "met input: [1, 0] is de output: [1]\n",
+      "met input: [1, 1] is de output: [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "XOR = PerceptronNetwork([\n",
+    "            PerceptronLayer([\n",
+    "                Perceptron([0.5, 0.5], -0.5),  # OR-gate\n",
+    "                Perceptron([-0.5, -0.5], 0.5),  # NAND-gate\n",
+    "            ]),\n",
+    "                PerceptronLayer([\n",
+    "                Perceptron([0.5, 0.5], -1),  # AND-gate\n",
+    "            ]),\n",
+    "])\n",
+    "\n",
+    "print_perceptron_network(XOR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "half adder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "met input: [0, 0] is de output: [0, 0]\n",
+      "met input: [0, 1] is de output: [1, 0]\n",
+      "met input: [1, 0] is de output: [1, 0]\n",
+      "met input: [1, 1] is de output: [0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "half_adder = PerceptronNetwork([\n",
+    "                PerceptronLayer([\n",
+    "                    Perceptron([0.5, 0.5], -.5),  # OR-gate\n",
+    "                    Perceptron([-.5, -.5], 0.5),  # NAND-gate\n",
+    "                ]),\n",
+    "                PerceptronLayer([\n",
+    "                    Perceptron([0.5, 0.5], -1.0),  # AND-gate\n",
+    "                    Perceptron([0.0, -1.0], 0.5),  # NOT-gate\n",
+    "                ]),\n",
+    "])\n",
+    "\n",
+    "print_perceptron_network(half_adder)"
    ]
   },
   {
