Update P4 - Backpropagation.ipynb

--- a/P4 - Backpropagation/P4 - Backpropagation.ipynb
+++ b/P4 - Backpropagation/P4 - Backpropagation.ipynb
@@ -64,7 +64,7 @@
     "        self.error = deriv_sigmoid(self.input_sum * sum([weight * error for weight, error in zip(weights, errors)]))\n",
     "        return self.error\n",
     "        \n",
-    "    def delta(self, learning_rate, output):\n",
+    "    def delta_weight(self, learning_rate, output):\n",
     "        \"\"\"calculate delta of a weight\"\"\"\n",
     "        return learning_rate * output * self.error\n",
     "    \n",
@@ -72,7 +72,7 @@
     "        \"\"\"calculates the delta bias and saves the deltas of the weights and bias to update later when all the deltas are calculated\"\"\"\n",
     "        deltas = List[]\n",
     "        for i in range(weights):\n",
-    "            deltas.append(delta(learning_rate, self.inputs[i]))\n",
+    "            deltas.append(delta_weight(learning_rate, self.inputs[i]))\n",
     "        \n",
     "        self.weight_deltas = deltas\n",
     "        self.bias_delta = learing_rate * self.error\n",
@@ -106,6 +106,77 @@
     "def deriv_sigmoid(x: float):\n",
     "    return sigmoid(x) * (1 - sigmoid(x))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neuron netwerk / Neuron layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuronLayer:\n",
+    "    \"\"\"a layer has one or more neurons\"\"\"\n",
+    "    neurons: List[Neuron]\n",
+    "\n",
+    "    def __init__(self, neurons: List[Neuron]):\n",
+    "        self.neurons = neurons\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuronNetwork:\n",
+    "    \"\"\"a network has one or more layers\"\"\"\n",
+    "    neuron_layers: List[NeuronLayer]\n",
+    "\n",
+    "    def __init__(self, neuron_layers: List[NeuronLayer]):\n",
+    "        self.neuron_layers = neuron_layers\n",
+    "\n",
+    "    def feed_forward(self, inputs: List[float]) -> List[List[float]]:\n",
+    "        \"\"\"gives ouput of a network given a input\"\"\"\n",
+    "        output_and_input = [inputs]\n",
+    "        \"\"\"input and output is used to store the output of a layer and uses it as a input for the next layer\"\"\"\n",
+    "        for layer in self.neuron_layers:\n",
+    "            \"\"\"loop through all the layers\"\"\"\n",
+    "            output_and_input.append(list(n.output(output_and_input[-1]) for n in layer.neurons))\n",
+    "            \n",
+    "        return output_and_input\n",
+    "    \n",
+    "    def backpropagation(self, targets: List[float], learing_rate: float):\n",
+    "        \"\"\"calculates errors of the neurons.\n",
+    "        begins with the output-layer and calculates back to the input-layer.\n",
+    "        afterwards the weights adn bias get updated.\"\"\"\n",
+    "        output_layer = self.neuron_layer[-1]\n",
+    "        \n",
+    "        for i in range(len(output_layer.neurons)): # calculate error of output-layer neurons\n",
+    "            output_layer.neurons[i].output_error(targets[i])\n",
+    "            \n",
+    "        for layer in self.neuron_layers[:-1].reverse() #calculate error of hiddenlayer neurons from back to front\n",
+    "            for i in range(len(layer)):\n",
+    "                layer.neurons[i].hidden_output_error(output_layer.neurons, i)\n",
+    "            output_layer = layer\n",
+    "                \n",
+    "        for layer in self.neuron_layers: # update the weights and bias\n",
+    "            for neuron in layer.neurons:\n",
+    "                neuron.update(learing_rate)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
